# django-vincent-1-msg

./: Makefile  README.md  pyproject.toml
project/: settings.py
